# alfabet_lite

./: LICENSE  MANIFEST.in  Notes_TYW  Notes_TYW.md  README.md  setup.cfg  setup.py
alfabet_lite/: drawing.py  features.py  model.py  mol_preprocessor.py  preprocessor.py  tokenizer.py
examples/: run_test_predictions.ipynb
tests/: test_model.py
