[versioneer]
VCS = git
style = pep440
versionfile_source = alfabet_lite/_version.py
versionfile_build = alfabet_lite/_version.py
tag_prefix = ''

[metadata]
name = alfabet-lite
description = A lightweight library to estimate bond dissociation energies (BDEs) of organic molecules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kangqiao-ctrl/alfabet_lite
author = Peter St. John, Qiao Kang
author_email = peter.stjohn@nrel.gov, kangqiao@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    tqdm
    pooch
    joblib
    rdkit

[options.extras_require]
tensorflow =
    tensorflow==2.15
apple_silicon =
    tensorflow-metal
